--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" /><!--add 2022-2-11 Android11-->
 
     <application
         android:allowBackup="true"
@@ -27,7 +29,9 @@
         <activity android:name=".GenerateCodeActivity" android:screenOrientation="portrait"/>
         <activity android:name=".DisPlayActivity" android:screenOrientation="portrait" />
         <activity android:name=".DisPlayMulActivity" android:screenOrientation="portrait" />
-        <activity android:name=".MainActivity" android:screenOrientation="unspecified">
+        <activity android:name=".MainActivity" android:screenOrientation="unspecified"
+            android:exported="true"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
